Fix card spacing for About me and Work sections

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ body {
   .card-body {
     background-color: var(--light);
   }
+
+  .card {
+    margin: 10px 10px;
+  }
   
   .valueProp {
     margin-top: 15px;
